<resources>
    <string name="app_name">Inventory App</string>
    <string name="empty_view_subtitle_text">Maybe you could add some elements…</string>
    <string name="empty_view_title_text">Sorry, your inventory is empty</string>
    <string name="activity_editor_title">Item editor</string>
    <string name="activity_detail_title">Item detail</string>
    <string name="editor_name_label">Name</string>
    <string name="editor_quantity_label">Quantity</string>
    <string name="editor_price_label">Price</string>
    <string name="editor_add_item">Add item</string>
    <string name="toast_insert_item_success">Insert item success</string>
    <string name="toast_insert_item_failed">Insert item failed</string>
    <string name="list_header_number">#</string>
    <string name="list_header_name">Name</string>
    <string name="list_header_quantity">Quantity</string>
    <string name="list_header_price">Price</string>
    <string name="editor_cancel">Cancel</string>
    <string name="editor_image_picker_error">Something went wrong</string>
    <string name="editor_image_picker_no_selection">You haven\'t picked Image</string>
    <string name="editor_order_quantity_label">Order quantity</string>
    <string name="editor_order_now_button">Order now!</string>
    <string name="editor_shipment_quantity_label">Shipment quantity</string>
    <string name="edit_load_picture_button">Load Picture</string>
    <string name="editor_product_image_description">Product image</string>
    <string name="edit_email_label">Seller email</string>
    <string name="editor_seller_email_label">Seller email</string>
    <string name="confirmation_dialog_message">Delete?</string>
    <string name="confirmation_dialog_yes">Yes</string>
    <string name="confirmation_dialog_no">No</string>
    <string name="detail_button_get_shipment">Get shipment!</string>
    <string name="detail_button_remove_item">Remove item</string>
    <string name="editor_product_name_hint">Product name</string>
</resources>
