<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/editor_name_label"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            />

        <EditText
            android:id="@+id/edit_item_name"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:lines="1"
            tools:text="Product name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/editor_quantity_label"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_item_quantity"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="number"
            tools:text="20"
            android:lines="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/editor_price_label"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_item_price"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            tools:text="$10.00"
            android:lines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/edit_email_label"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_item_seller_email"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:text="john.doe@gmail.com"
            android:lines="1" />
    </LinearLayout>

    <ImageView
        android:contentDescription="@string/editor_product_image_description"
        android:id="@+id/imgView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
    </ImageView>

    <Button
        android:id="@+id/editor_load_image_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        style="@style/button"
        android:text="@string/edit_load_picture_button" >
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editor_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editor_cancel"
            style="@style/button"/>

        <Button
            android:id="@+id/editor_add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editor_add_item"
            style="@style/button"/>

    </LinearLayout>

</LinearLayout>