<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.joseaherrero.inventoryapp.DetailActivity">

    <ImageView
        android:id="@+id/detail_item_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="8dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/editor_name_label"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/detail_item_name"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="Product name"
            android:lines="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/editor_quantity_label"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/detail_item_quantity"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="20"
            android:lines="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/editor_price_label"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/detail_item_price"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="$10.00"
            android:lines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/editor_seller_email_label"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/detail_item_seller_email"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="john.doe@gmail.com"
            android:lines="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/editor_order_quantity_label"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/detail_item_order_quantity"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="number"
            android:lines="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/detail_item_order_button"
            style="@style/button"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/editor_order_now_button"/>

        <Button
            android:id="@+id/detail_item_get_shipment_button"
            style="@style/button"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="Get shipment!"/>

    </LinearLayout>

    <Button
        android:id="@+id/detail_item_remove_button"
        style="@style/dangerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Remove item"
     />

</LinearLayout>
